--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,19 @@
+/* CSS Document */
+.nav{
+    color: #2E2F42;
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    text-decoration: none;   
+   
+}
+.nav-a{ 
+    text-transform: uppercase;
+}
+.accent{
+    color: #4D5AE5;
+}
+
 .main-section {
     background-color: #2E2F42;
 }
@@ -18,3 +34,4 @@ button {
     color: #FFFFFF;
     text-align: center;
 }
+web #4D5AE5
