--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,11 @@
 /* CSS Document */
 
+.body {
+    font-family: "Roboto", sans-serif;
+    color: #434455;
+    background-color: #FFFFFF;
+}
+
 .nav{
     font-family: "Raleway", sans-serif;
     font-size: 18px; 
