--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@
 }
 
 
- .nav-list,  .contacts-list, .about-us, .team,  .portfolio {
+ .nav-list,  .contacts-list, .about-us, .team-title,  .portfolio-title {
     list-style-type: none;
  }
 
@@ -106,7 +106,6 @@
 .button {
     background-color: #4D5AE5;
     font-family: "Roboto", sans-serif;
-    display: block;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
