--- a/css/style.css
+++ b/css/style.css
@@ -41,13 +41,12 @@
     color: #404bbf;
 }
 
-
 .nav-list .link {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color:#434455;
+    color:#2e2f42;
 }
 
 .nav a,
@@ -103,18 +102,18 @@
     font-variation-settings: "wdth" 100;
 }
 
-.button {
+.main-box {
+    color: #ffffff;
     background-color: #4D5AE5;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    color: #ffffff;
     text-align: center;
 }
 
-.main-section .button:hover,
-.main-section .button:focus {
+.main-section .main-box:hover,
+.main-section .main-box:focus {
     background-color: #404BBF;
     cursor: pointer;
 }
@@ -138,9 +137,15 @@ h3{
     letter-spacing: 0.02em;
 }
 
-.about-us p, 
-.team p, 
-.portfolio-title p{
+.about-us{
+font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    color: #434455;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+.text{
     font-family: "Roboto", sans-serif;
     font-size: 16px;
     color: #434455;
