--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@
     cursor: pointer;
 }
 
-h2 {
+.name {
     color: #2E2F42;
     font-family: "Roboto", sans-serif;
     font-style: normal;
@@ -126,7 +126,7 @@ h2 {
     font-weight: bold;
 }
 
-h3{
+.name-next {
     color: #2E2F42;
     font-family: "Roboto", sans-serif;
     font-size: 20px;
@@ -137,7 +137,7 @@ h3{
     letter-spacing: 0.02em;
 }
 
-.about-us{
+.about-us-list{
 font-family: "Roboto", sans-serif;
     font-size: 16px;
     color: #434455;
