--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,10 @@
     font-weight: 700;
     line-height: 1.17;
     letter-spacing: 0.03em;
-    COLOR: #4d5ae5;
+    color: #4d5ae5;
 }
 
-.nav-title { 
+.nav-logo { 
     color: #4d5ae5;
     font-family: "Raleway", sans-serif;
     font-size: 18px;
@@ -55,24 +55,14 @@
     color: #2E2F42;
     font-style: normal
 }
-.contacts{
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: normal; 
-    font-style: normal;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
 
-.contacts-list{
+.contacts-list, .contacts-link {
     font-family: "Roboto", sans-serif;
     font-size: 16px;
     line-height: 24px;
     font-weight: normal; 
     font-style: normal;
     letter-spacing: 0.02em;
-    color: #434455;
 }
 
 .contacts-link:hover,
