--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
     text-transform: uppercase;
     }
         .accent {
-            color: #2E2F42;
+            color: #4d5ae5;
             font-family: "Raleway", sans-serif;
             font-size: 18px;
             line-height: 21px;
@@ -63,10 +63,10 @@
 .contact-link {
     font-family: "Roboto", sans-serif;
     font-size: 16px;
-    line-height: 24px;
+    line-height: 24px; 
     font-weight: normal; 
     font-style: normal;
-color: #434455;
+    color: #434455;
     letter-spacing: 0.02em;
 }
 
