--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,7 @@
     color: #434455;
     background-color: #FFFFFF;
 }
-.nav {
-    font-family: "Raleway", sans-serif;
-    font-size: 18px;
-    line-height: 21px;
-    font-weight: 700;
-    line-height: 1.17;
-    letter-spacing: 0.03em;}
+b 
 
 
 .nav-logo { 
@@ -24,15 +18,14 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     }
-.accent {
+.nav-logo-accent {
      color: #2e2f42;
         }
-        
+
 .nav-list .link:hover,
 .nav-list .link:focus {
     color: #404bbf;
 }
-
 
 .nav-list .link {
     font-weight: 500;
@@ -43,10 +36,10 @@
 }
 
 .nav a,
-.contacts a {
+.contact a {
     text-decoration: none;
-    color: #2E2F42;
-    font-style: normal
+    font-style: normal;
+    text-transform: uppercase;
 }
 
 .contact {
