--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,15 @@
     color: #434455;
     background-color: #FFFFFF;
 }
-b 
+ .nav{
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color:#4d5ae5;
+ }
 
 
 .nav-logo { 
