--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@
 
 
  .nav-list,  .contact-list, 
- .about-us, .team-title,  .portfolio-title {
+ .about-us-list, .team-list,  .portfolio-title {
     list-style-type: none;
  }
 
